added the sels.log function to use to debug your script. Kinda rubbish but partly does the job xD

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:selescript.helloWorld"
+		"onStartupFinished"
 	],
 	"main": "./extension.js",
 	"contributes": {
